--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,17 +1,20 @@
+var x
+var y
+var h
+var w
 *{
   margin: 0;
 }
-
-.box{
+canvas{
   position:absolute;
+  top:0;
+  padding:0;
+  margin:0;
 }
 
 .webcam{
   position:absolute;
-  top:100px
-}
-
-button{
-  position: absolute;
-  top: 550px;
+  top:0;
+  padding:0;
+  margin:0;
 }
