proof of concept mk 1

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,29 @@
-var x
-var y
-var h
-var w
 *{
   margin: 0;
 }
+body{
+  background-color:#585858;
+}
+/* .overlay {
+  position:absolute;
+  left:0px;
+  top:0px;
+  height:980px;
+ } */
+
 canvas{
   position:absolute;
+  height: 960px;
   top:0;
+  left:0;
   padding:0;
   margin:0;
 }
 
 .webcam{
   position:absolute;
-  top:0;
+  height: 960px;
+  top:0px;
   padding:0;
   margin:0;
 }
